--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <p>Cool</p><span>undefinedOk what you mean</span>
+    <p>Cool</p><span> This works Ok what you mean</span>
+    <h1>Ok this works wierdly enogh</h1>
 </body>
 
 </html>
