--- a/public/404.html
+++ b/public/404.html
@@ -66,13 +66,13 @@
     <header class="header">
         <nav class="navbar navbar-fixed">
             <article class="layout-contain navbar-layout">
-                <section class="navbar-head"><a class="navbar-title" href="/index.html" tabindex="0">JOSEPH!</a>
+                <section class="navbar-head"><a class="navbar-title style-primary style-primary-hover" href="/index.html" tabindex="0">JOSEPH!</a>
                     <section class="layout-spacer"></section>
-                    <section class="navbar-foot navbar-mobile"><button class="navbar-menu btn layer-round layout-padding-smaller layer-transparent layer-secondary-hover style-secondary style-hover-black" tabindex="-1" type="button" title="Menu Bar"><span class="btn-group"><i class="navbar-menu icon style-font-family-bold style-black style-font-sz-24">menu</i></span></button></section>
+                    <section class="navbar-foot navbar-mobile"><button class="navbar-menu btn layer-round layout-padding-smaller layer-transparent layer-light-hover style-primary" tabindex="-1" type="button" title="Menu Bar"><span class="btn-group"><i class="navbar-menu icon style-font-family-bold style-font-sz-24">menu</i></span></button></section>
                 </section>
                 <section class="layout-spacer navbar-desktop"></section>
                 <section class="navbar-main">
-                    <ul class="navbar-list">
+                    <ul class="navbar-list" id="swup">
                         <li><a class="navbar-link" href="/about.html" data-swup-preload>about</a></li>
                         <li><a class="navbar-link" href="/projects.html" data-swup-preload>projects</a></li>
                         <li><a class="navbar-link" href="/contact.html" data-swup-preload>contact</a></li>
