--- a/public/contact.html
+++ b/public/contact.html
@@ -58,7 +58,7 @@
             _require("https://cdnjs.cloudflare.com/ajax/libs/html5-history-api/4.2.10/history.ielte7.min.js");
         }
     </script>
-    <title>The Sub Page</title>
+    <title>Contact</title>
 </head>
 
 <body>
@@ -72,9 +72,9 @@
                 <section class="layout-spacer navbar-desktop"></section>
                 <section class="navbar-main">
                     <ul class="navbar-list" id="swup">
-                        <li><a class="navbar-link navbar-link-focus" href="/about.html" data-swup-preload>about</a></li>
+                        <li><a class="navbar-link" href="/about.html" data-swup-preload>about</a></li>
                         <li><a class="navbar-link" href="/projects.html" data-swup-preload>projects</a></li>
-                        <li><a class="navbar-link" href="/contact.html" data-swup-preload>contact</a></li>
+                        <li><a class="navbar-link navbar-link-focus" href="/contact.html" data-swup-preload>contact</a></li>
                     </ul>
                 </section>
             </article>
@@ -82,44 +82,12 @@
     </header>
     <div class="header-top-spot"></div>
     <main class="main transition-fade" id="swup">
-        <section class="layer">
-            <article class="layout-contain layout-padding-horz-small layout-padding-bottom layout-padding-dull-top">
-                <div class="layer-hero">
-                    <div class="layer-image">
-                        <div class="load-img">
-                            <div class="img-contain">
-                                <picture>
-                                    <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_70,w_500/v1/white-flower.webp" type="image/webp">
-                                    <source media="(max-width: 500px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_70,w_500/v1/white-flower.jpg" type="image/jpeg">
-                                    <source media="(max-width: 700px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_700/v1/white-flower.webp" type="image/webp">
-                                    <source media="(max-width: 700px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_700/v1/white-flower.jpg" type="image/jpeg">
-                                    <source media="(max-width: 900px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_900/v1/white-flower.webp" type="image/webp">
-                                    <source media="(max-width: 900px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_900/v1/white-flower.jpg" type="image/jpeg">
-                                    <source media="(min-width: 900px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/white-flower.webp" type="image/webp"><img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/white-flower.jpg" alt="A city Image" loading="lazy"></picture>
-                                <picture><img class="placeholder-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,e_blur:150,f_auto,fl_progressive:steep,q_100,w_100/v1/white-flower.jpg" alt="A city Image" inline loading="eager"></picture><noscript>Javascript is necesscary for an amazing experience.<img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/white-flower.jpg" alt="A city Image" loading="lazy"></noscript>
-                            </div>
-                        </div>
-                    </div>
-                    <section class="layout-enlarge">
-                        <div class="layer-content style-center">
-                            <section class="layer-header"></section>
-                            <section class="layer-main">
-                                <h1 class="style-font-title layer-title style-white">Subpage.</h1><button class="next-layer btn layer-round layout-padding-small layer-tertiary layer-shadow layer-secondary-hover style-secondary style-hover-tertiary layer-hero-scroll-down" tabindex="0" type="button"><span class="btn-group"><i class="icon style-font-sz-36">expand_more</i></span></button>
-                            </section>
-                        </div>
-                    </section>
-                </div>
-            </article>
-        </section>
         <section class="layer layout-padding-horz">
             <article class="layout-shorten layout-contain">
                 <section class="layer-header style-center">
-                    <h4 class="style-primary-dark style-bold">Lorem itpsuim</h4>
+                    <h4 class="style-primary-dark style-bold">Contact</h4>
                 </section>
-                <section class="layer-main"><span class="style-line-height-double"><span class="style-line-height-double layout-padding-vert-small layout-padding-top layout-margin-left-large layout-inline-block"> </span><span class="style-line-height-double layout-padding-vert-small">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
-                            took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                            It was popularised in the 1960s with the release of Letraset sheets
-                            containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum, </span><a class="layout-inline" href="/index.html" tabindex="0">home</a></span></section>
+                <section class="layer-main"><span class="style-line-height-double"><span class="style-line-height-double layout-padding-vert-small">Github: </span><a class="layout-inline" href="/index.html" tabindex="0">home</a><span class="style-line-height-double layout-padding-vert-small"><br></span><span class="style-line-height-double layout-padding-vert-small">Youtube: </span><a class="layout-inline" href="/index.html" tabindex="0">home</a></span></section>
             </article>
         </section>
         <section class="layer footer">
