--- a/public/projects.html
+++ b/public/projects.html
@@ -12,15 +12,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com/">
     <link rel="preconnect" href="https://cdnjs.cloudflare.com/">
     <link rel="preconnect" href="https://res.cloudinary.com/okikio-assets/">
-    <link rel="preload" href="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=IntersectionObserver%2CHTMLPictureElement%2CIntersectionObserverEntry%2CXMLHttpRequest%2Cconsole.log%2Cdocument.querySelector%2Cfetch%2CrequestAnimationFrame%2C%7Ehtml5-elements%2C%7Eviewport%2CgetComputedStyle%2CMutationObserver%2CObject.assign%2CObject.getOwnPropertyNames%2CObject.keys%2CObject.values%2CRegExp.prototype.flags%2CURL%2Cblissfuljs%2Cdefault%2Ces2015%2Ces2016%2Ces2017%2Ces2018%2Ces5%2Ces6%2Ces7%2CArray.prototype.includes%2CArray.prototype.filter%2CArray.prototype.find%2CArray.prototype.forEach%2CArray.prototype.every%2CArray.isArray%2CArray.from%2CEvent" as="script" async crossorigin="anonymous">
     <link rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
     <link rel="preload" href="https://fonts.gstatic.com/s/bungeeinline/v5/Gg8zN58UcgnlCweMrih332VuPGV_-Q.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
     <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_dJE3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
     <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_c5H3gnD_g.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
     <link rel="preload" href="https://fonts.gstatic.com/s/varelaround/v12/w8gdH283Tvk__Lua32TysjIfp8uP.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
     <link rel="preload" href="https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin="anonymous" async>
-    <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/nwmatcher/1.4.2/nwmatcher.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/json2/20160511/json2.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.13/es5-shim.min.js" async></script><![endif]-->
     <link rel="stylesheet" href="./css/app.min.css" inline async>
+    <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/nwmatcher/1.4.2/nwmatcher.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/json2/20160511/json2.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js" async></script><script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.13/es5-shim.min.js" async></script><![endif]-->
     <!--[if lt IE 10]><script src="https://cdnjs.cloudflare.com/ajax/libs/flexibility/2.0.1/flexibility.js" async></script><script>flexibility(document.documentElement);</script><![endif]-->
     <script>
         var check = function() {
@@ -66,7 +65,7 @@
     <header class="header">
         <nav class="navbar navbar-fixed">
             <article class="layout-contain navbar-layout">
-                <section class="navbar-head"><a class="navbar-title style-primary style-primary-hover" href="/index.html" tabindex="0">JOSEPH!</a>
+                <section class="navbar-head"><a class="navbar-title style-primary style-primary-dark-hover style-primary-focus" href="/index.html" tabindex="0">JOSEPH!</a>
                     <section class="layout-spacer"></section>
                     <section class="navbar-foot navbar-mobile"><button class="navbar-menu btn layer-round layout-padding-smaller layer-transparent layer-light-hover style-primary" tabindex="-1" type="button" title="Menu Bar"><span class="btn-group"><i class="navbar-menu icon style-font-family-bold style-font-sz-24">menu</i></span></button></section>
                 </section>
@@ -96,8 +95,8 @@
                                     <source media="(max-width: 700px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_700/v1/blue-sky.jpg" type="image/jpeg">
                                     <source media="(max-width: 900px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_900/v1/blue-sky.webp" type="image/webp">
                                     <source media="(max-width: 900px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_900/v1/blue-sky.jpg" type="image/jpeg">
-                                    <source media="(min-width: 900px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/blue-sky.webp" type="image/webp"><img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/blue-sky.jpg" alt="A city Image"></picture>
-                                <picture><img class="placeholder-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,e_blur:150,f_auto,fl_progressive:steep,q_100,w_100/v1/blue-sky.jpg" alt="A city Image" inline></picture><noscript>Javascript is necesscary for an amazing experience.<img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/blue-sky.jpg" alt="A city Image"></noscript>
+                                    <source media="(min-width: 900px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/blue-sky.webp" type="image/webp"><img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/blue-sky.jpg" alt="A city Image" loading="lazy"></picture>
+                                <picture><img class="placeholder-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,e_blur:150,f_auto,fl_progressive:steep,q_100,w_100/v1/blue-sky.jpg" alt="A city Image" inline loading="eager"></picture><noscript>Javascript is necesscary for an amazing experience.<img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/blue-sky.jpg" alt="A city Image" loading="lazy"></noscript>
                             </div>
                         </div>
                     </div>
