--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,15 @@
             </article>
         </nav>
     </header>
+    <style>
+        .anim {
+            background: orange;
+            width: 40px;
+            height: 40px;
+            display: block;
+        }
+    </style>
+    <div class="anim"></div>
     <div class="header-top-spot"></div>
     <main class="main transition-fade" id="swup">
         <section class="layer">
@@ -96,7 +105,7 @@
                                     <source media="(max-width: 900px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_900/v1/white_car.webp" type="image/webp">
                                     <source media="(max-width: 900px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_900/v1/white_car.jpg" type="image/jpeg">
                                     <source media="(min-width: 900px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/white_car.webp" type="image/webp"><img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/white_car.jpg" alt="A city Image" loading="lazy"></picture>
-                                <picture><img class="placeholder-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,e_blur:150,f_auto,fl_progressive:steep,q_100,w_100/v1/white_car.jpg" alt="A city Image" inline loading="eager"></picture><noscript>Javascript is necesscary for an amazing experience.<img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/white_car.jpg" alt="A city Image" loading="lazy"></noscript>
+                                <picture><img class="placeholder-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,e_blur:150,f_auto,fl_progressive:steep,q_100,w_100/v1/white_car.jpg" alt="A city Image" inline loading="auto"></picture><noscript>Javascript is necesscary for an amazing experience.<img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/white_car.jpg" alt="A city Image" loading="lazy"></noscript>
                             </div>
                         </div>
                     </div>
@@ -205,7 +214,7 @@
                                                     <source media="(max-width: 900px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_900/v1/blue-sky.webp" type="image/webp">
                                                     <source media="(max-width: 900px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_900/v1/blue-sky.jpg" type="image/jpeg">
                                                     <source media="(min-width: 900px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/blue-sky.webp" type="image/webp"><img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/blue-sky.jpg" alt="City Alt" loading="lazy"></picture>
-                                                <picture><img class="placeholder-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,e_blur:150,f_auto,fl_progressive:steep,q_100,w_100/v1/blue-sky.jpg" alt="City Alt" inline loading="eager"></picture><noscript>Javascript is necesscary for an amazing experience.<img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/blue-sky.jpg" alt="City Alt" loading="lazy"></noscript>
+                                                <picture><img class="placeholder-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,e_blur:150,f_auto,fl_progressive:steep,q_100,w_100/v1/blue-sky.jpg" alt="City Alt" inline loading="auto"></picture><noscript>Javascript is necesscary for an amazing experience.<img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/blue-sky.jpg" alt="City Alt" loading="lazy"></noscript>
                                             </div>
                                         </div>
                                     </div>
