--- a/public/about.html
+++ b/public/about.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
+    <meta http-equiv="Cache-Control" content="public, max-age=31536000">
     <meta http-equiv="Content-Security-Policy" content="default-src data: https: 'self' https://polyfill.io/ https://fonts.gstatic.com/* https://cdnjs.cloudflare.com/* https://res.cloudinary.com/okikio-assets/ 'unsafe-eval' 'unsafe-inline'; connect-src * data: blob: ws:; upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="The porfolio of Joseph, it contains all amazing projects etc...">
@@ -96,7 +96,7 @@
                                     <source media="(max-width: 900px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_900/v1/white-flower.webp" type="image/webp">
                                     <source media="(max-width: 900px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_900/v1/white-flower.jpg" type="image/jpeg">
                                     <source media="(min-width: 900px)" srcset="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/white-flower.webp" type="image/webp"><img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/white-flower.jpg" alt="A city Image" loading="lazy"></picture>
-                                <picture><img class="placeholder-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,e_blur:150,f_auto,fl_progressive:steep,q_100,w_100/v1/white-flower.jpg" alt="A city Image" inline loading="auto"></picture><noscript>Javascript is necesscary for an amazing experience.<img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/white-flower.jpg" alt="A city Image" loading="lazy"></noscript>
+                                <picture><img class="placeholder-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,e_blur:150,f_auto,fl_progressive:steep,q_100,w_60/v1/white-flower.jpg" alt="A city Image" inline loading="auto"></picture><noscript>Javascript is necesscary for an amazing experience.<img class="core-img" src="https://res.cloudinary.com/okikio-assets/image/upload/c_scale,dpr_auto,f_auto,fl_progressive:steep,q_30,w_auto/v1/white-flower.jpg" alt="A city Image" loading="lazy"></noscript>
                             </div>
                         </div>
                     </div>
