--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
     <meta http-equiv="Cache-Control" content="public, max-age=31536000">
     <meta http-equiv="Content-Security-Policy" content="default-src data: https: 'self' https://polyfill.io/ https://fonts.gstatic.com/* https://cdnjs.cloudflare.com/* https://res.cloudinary.com/okikio-assets/ 'unsafe-eval' 'unsafe-inline'; connect-src * data: blob: ws:; upgrade-insecure-requests">
@@ -252,7 +252,7 @@
             </div>
         </article>
     </div>
-    <script src="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=IntersectionObserver%2CHTMLPictureElement%2CXMLHttpRequest%2Cconsole.log%2Cdocument.querySelector%2Cfetch%2CrequestAnimationFrame%2C%7Ehtml5-elements%2C%7Eviewport%2CgetComputedStyle%2CMutationObserver%2CObject.assign%2CObject.getOwnPropertyNames%2CObject.keys%2CObject.values%2CRegExp.prototype.flags%2CURL%2Cblissfuljs%2Cdefault%2Ces2015%2Ces2016%2Ces2017%2Ces2018%2Ces5%2Ces6%2Ces7%2CArray.prototype.includes%2CArray.prototype.filter%2CArray.prototype.find%2CArray.prototype.forEach%2CArray.prototype.every%2CArray.isArray%2CArray.from%2CEvent" crossorigin="anonymous" async></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?flags=gated&amp;features=IntersectionObserver%2CHTMLPictureElement%2CXMLHttpRequest%2Cconsole.log%2Cdocument.querySelector%2Cfetch%2CrequestAnimationFrame%2C%7Ehtml5-elements%2C%7Eviewport%2CgetComputedStyle%2CMutationObserver%2CObject.assign%2CObject.getOwnPropertyNames%2CObject.keys%2CObject.values%2CRegExp.prototype.flags%2CURL%2Cblissfuljs%2Cdefault%2Ces2015%2Ces2016%2Ces2017%2Ces2018%2Ces5%2Ces6%2Ces7%2CArray.prototype.includes%2CArray.prototype.filter%2CArray.prototype.find%2CArray.prototype.forEach%2CArray.prototype.every%2CArray.isArray%2CArray.from%2CEvent" integrity="sha384-eCw4T7GRQNfHpqii0FeGc9/QsVApVk/4aysICeEV1YCJyoux/XxpPbWj3MnevDCl" crossorigin="anonymous" async></script>
     <script src="./js/app.vendor.min.js" inline defer></script>
 </body>
 
