--- a/public/404.html
+++ b/public/404.html
@@ -49,7 +49,7 @@
     <div class="header-top-spot"></div>
     <main class="main transition-fade" id="swup">
         <section class="layer layout-padding-horz layout-padding-large-top">
-            <article class="layout-shorten layout-contain">
+            <article class="layout-shorten layout-contain-large">
                 <section class="layer-header style-center">
                     <h4 class="style-primary-dark style-bold">404, Page Not Found.</h4>
                 </section>
