--- a/public/404.html
+++ b/public/404.html
@@ -64,7 +64,7 @@
 <body>
     <header class="header">
         <nav class="navbar navbar-fixed">
-            <article class="layout-contain navbar-layout">
+            <article class="layout-contain-large navbar-layout">
                 <section class="navbar-head"><a class="navbar-title style-primary style-primary-dark-hover style-primary-focus" href="/index.html" tabindex="0">JOSEPH!</a>
                     <section class="layout-spacer"></section>
                     <section class="navbar-foot navbar-mobile"><button class="navbar-menu btn layer-round layout-padding-smaller layer-transparent layer-light-hover style-primary" tabindex="-1" type="button" title="Menu Bar"><span class="btn-group"><i class="navbar-menu icon style-font-family-bold style-font-sz-24">menu</i></span></button></section>
