--- a/public/projects.html
+++ b/public/projects.html
@@ -64,7 +64,7 @@
 <body>
     <header class="header">
         <nav class="navbar navbar-fixed">
-            <article class="layout-contain navbar-layout">
+            <article class="layout-contain-large navbar-layout">
                 <section class="navbar-head"><a class="navbar-title style-primary style-primary-dark-hover style-primary-focus" href="/index.html" tabindex="0">JOSEPH!</a>
                     <section class="layout-spacer"></section>
                     <section class="navbar-foot navbar-mobile"><button class="navbar-menu btn layer-round layout-padding-smaller layer-transparent layer-light-hover style-primary" tabindex="-1" type="button" title="Menu Bar"><span class="btn-group"><i class="navbar-menu icon style-font-family-bold style-font-sz-24">menu</i></span></button></section>
@@ -83,7 +83,7 @@
     <div class="header-top-spot"></div>
     <main class="main transition-fade" id="swup">
         <section class="layer">
-            <article class="layout-contain-larger layout-padding-horz-small layout-padding-bottom layout-padding-dull-top">
+            <article class="layout-contain-large layout-padding-horz-small layout-padding-bottom layout-padding-dull-top">
                 <div class="layer-hero">
                     <div class="layer-image">
                         <div class="load-img">
@@ -112,7 +112,7 @@
             </article>
         </section>
         <section class="layer layout-padding-horz">
-            <article class="layout-shorten layout-contain-large">
+            <article class="layout-shorten layout-contain">
                 <section class="layer-header style-center">
                     <h4 class="style-primary-dark style-bold">Lorem itpsuim</h4>
                 </section>
