--- a/public/404.html
+++ b/public/404.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Accept-CH" content="DPR, Viewport-Width, Width">
     <meta http-equiv="Cache-Control" content="public, max-age=31536000">
     <meta http-equiv="Content-Security-Policy" content="default-src data: https: 'self' https://polyfill.io/ https://fonts.gstatic.com/* https://cdnjs.cloudflare.com/* https://res.cloudinary.com/okikio-assets/ 'unsafe-eval' 'unsafe-inline'; connect-src * data: blob: ws:; upgrade-insecure-requests">
+    <meta name="theme-color" content="#4500ff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Description" content="The porfolio of Joseph, it contains all amazing projects etc...">
     <link rel="manifest" href="manifest.json">
