Update node and yarn, and PWA is now functional

--- a/public/contact.html
+++ b/public/contact.html
@@ -82,7 +82,7 @@
             </article>
         </nav>
     </header>
-    <div class="header-top-spot"><button class="add-button btn layer-round layout-margin-large layout-padding-small-horz layout-padding-smaller-vert layer-primary layer-primary-dark-hover style-secondary style-hover-secondary-dark" tabindex="0" type="button"><span class="btn-group style-font-sz-24"><i class="icon">file_download</i><span class="btn-spacer"></span><span class="btn-content">Install app</span></span></button></div>
+    <div class="header-top-spot"><button class="add-button btn layer-round layout-margin-large layout-padding-small-horz layout-padding-smaller-vert layer-primary layer-primary-dark-hover style-tertiary style-hover-tertiary-dark" tabindex="0" type="button"><span class="btn-group style-font-sz-24"><i class="icon">file_download</i><span class="btn-spacer"></span><span class="btn-content">Install app</span></span></button></div>
     <main class="main transition-fade" id="swup">
         <section class="layer layout-padding-horz">
             <article class="layout-shorten layout-contain">
