--- a/public/about.html
+++ b/public/about.html
@@ -82,7 +82,7 @@
     <header class="header">
         <nav class="navbar navbar-fixed">
             <article class="layout-contain-large navbar-layout">
-                <section class="navbar-head"><a class="navbar-title style-primary style-primary-dark-hover style-primary-focus" href="/index" tabindex="0">JOSEPH!</a>
+                <section class="navbar-head"><a class="navbar-title style-primary style-primary-dark-hover style-primary-focus" href="/index.html" tabindex="0">JOSEPH!</a>
                     <section class="layout-spacer"></section>
                     <section class="navbar-foot navbar-mobile">
                         <section class="layout-inline-block"><button class="add-button btn layer-round layout-padding-smaller layer-transparent layer-light-hover style-secondary style-hover-secondary-dark" tabindex="-1" type="button" title="Install App"><span class="btn-group"><i class="icon style-font-family-bold style-font-sz-24">add_circle_outline</i></span></button></section>
