Uniform font sizes

--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@
                 <section class="layer-header style-center">
                     <h4 class="style-primary-dark style-bold">Lorem itpsuim</h4>
                 </section>
-                <section class="layer-main"><span class="style-line-height-double"><span class="style-line-height-double layout-padding-vert-small layout-padding-top layout-margin-left-large layout-inline-block"> </span><span class="style-line-height-double layout-padding-vert-small">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
+                <section class="layer-main style-justify"><span class="style-line-height-double"><span class="style-line-height-double layout-padding-vert-small layout-padding-top layout-margin-left-large layout-inline-block"> </span><span class="style-line-height-double layout-padding-vert-small">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
                             took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                             It was popularised in the 1960s with the release of Letraset sheets
                             containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum, </span><a class="layout-inline" href="/about.html" tabindex="0">run</a></span></section>
@@ -151,9 +151,9 @@
                     </section>
                     <section class="layer-main layout-padding-top style-line-height-double"><span class="style-line-height-double">
                             <section class="layout-row">
-                                <section class="layout-col-2 layout-padding-bottom-small"><span class="style-bold style-font-16">03/03</span></section>
-                                <section class="layout-col-3 layout-padding-bottom"><span class="style-line-height-double style-bold layout-block style-font-16">2018</span><span class="style-line-height-double layout-block style-font-16">E-commerse</span><span class="style-line-height-double layout-block style-font-16">Design Executive</span></section>
-                                <section class="layout-col-7"><span class="style-line-height-double style-font-16">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                <section class="layout-col-2 layout-padding-bottom-small"><span class="style-bold style-font-24">03/03</span></section>
+                                <section class="layout-col-3 layout-padding-bottom"><span class="style-line-height-double style-bold layout-block style-font-24">2018</span><span class="style-line-height-double layout-block style-font-16">E-commerse</span><span class="style-line-height-double layout-block style-font-24">Design Executive</span></section>
+                                <section class="layout-col-7 style-justify"><span class="style-line-height-double style-font-24">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                                         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
                                         unknown printer took a galley of type and scrambled it to make a type specimen book.</span></section>
                             </section>
@@ -194,7 +194,7 @@
                 <section class="layer-main layout-vert"><span class="style-line-height-double">
                         <section class="layout-row">
                             <section class="layout-col-6 layout-padding-bottom-small layout-padding-right-large"><span class="style-bold style-line-height h3 style-color-primary">Breakthrough<br>Limits!</span></section>
-                            <section class="layout-col-6"><span class="layout-block style-line-height-double style-font-16">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                            <section class="layout-col-6"><span class="layout-block style-line-height-double style-font-24">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                                     Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
                                     unknown printer took a galley of type and scrambled it to make a type specimen book.</span></section>
                         </section>
